--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ input[type=submit]:hover {
 
 <p>DropBox Link: </p>
 
-<form action="https://www.dropbox.com/s/bmjawhx8x541afw/nikunj_resume.pdf?dl=0">
+<form action="http://bit.ly/2Dduicb">
     <input type="submit" value="Download" />
 </form>
 
