--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ input[type=submit]:hover {
 
 <p>DropBox Link: </p>
 
-<form action="https://goo.gl/CTkMX9">
+<form action="https://bit.ly/2Dduicb">
     <input type="submit" value="Download" />
 </form>
 
